[tool.poetry]
name = "bridge_solver_demo"
version = "0.1.0"
description = "Double Dummy Bridge Solver demo"
authors = ["OlgaPaw <olga.pawlowicz@gmail.com>"]
license = "afl-3.0"

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.16.0"
keras = "^2.3.1"
tensorflow = "^2.1.0"
matplotlib = "^3.1.3"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
yapf = "^0.29.0"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
